@@ -1,4 +1,4 @@
-package io.nexstudios.internal.nms.v1_21_8.packets;
+package io.nexstudios.internal.nms.v1_21_10.packets;
 
 import io.nexstudios.nexus.bukkit.hologram.HoloBuilder;
 import io.nexstudios.nexus.bukkit.hologram.HoloBuilderFactory;
@@ -11,7 +11,6 @@ import net.minecraft.network.protocol.game.ClientboundSetEntityDataPacket;
 import net.minecraft.network.protocol.game.ClientboundSetPassengersPacket;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.SynchedEntityData;
-import net.minecraft.world.entity.Display;
 import net.minecraft.world.entity.Display.TextDisplay;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.level.Level;
@@ -239,7 +238,7 @@ public final class PaperHoloBuilder implements HoloBuilder, HoloBuilderFactory {
         }
 
         private static Component joinLines(List<Component> lines) {
-            if (lines.size() == 1) return lines.getFirst();
+            if (lines.size() == 1) return lines.get(0);
             Component result = Component.empty();
             for (int i = 0; i < lines.size(); i++) {
                 result = result.append(lines.get(i));
@@ -319,6 +318,8 @@ public final class PaperHoloBuilder implements HoloBuilder, HoloBuilderFactory {
         }
     }
 
+    // ---------- helper classes ----------
+
     private static final class IdGen {
         private static final AtomicInteger NEXT = new AtomicInteger(1_700_000_000);
         static int next() { return NEXT.getAndIncrement(); }
@@ -341,7 +342,7 @@ public final class PaperHoloBuilder implements HoloBuilder, HoloBuilderFactory {
         }
 
         static Accessors resolve(Level level) {
-            Display.TextDisplay sample = newTextDisplay(level);
+            TextDisplay sample = newTextDisplay(level);
 
             EntityDataAccessor<?> bill = null;
             EntityDataAccessor<?> txt = null;
@@ -387,7 +388,7 @@ public final class PaperHoloBuilder implements HoloBuilder, HoloBuilderFactory {
             return new Accessors(bill, txt, lw, bg);
         }
 
-        private static Display.TextDisplay newTextDisplay(Level level) {
+        private static TextDisplay newTextDisplay(Level level) {
             try {
                 Constructor<TextDisplay> c = TextDisplay.class.getDeclaredConstructor(EntityType.class, Level.class);
                 c.setAccessible(true);
